--- a/contactform/templates/_settings.html
+++ b/contactform/templates/_settings.html
@@ -8,17 +8,19 @@
 	name:         'toEmail',
 	instructions: "The email address(es) that the contact form will send to. Separate multiple email addresses with commas."|t,
 	value:        settings.toEmail,
+	disabled:     (craft.config.get('toEmail', 'contactform') is not sameas(null)),
 	autofocus:    true,
 	errors:       settings.getErrors('toEmail')
 }) }}
 
 {{ forms.textField({
-	label:         "Sender Text"|t,
-	id:            'prependSender',
-	name:          'prependSender',
+	label:        "Sender Text"|t,
+	id:           'prependSender',
+	name:         'prependSender',
 	instructions: "Text that will be prepended to the email’s From Name to inform who the Contact Form actually was sent by."|t,
-	value:         (settings.prependSender ? settings.prependSender : "On behalf of"|t),
-	errors:        settings.getErrors('prependSender')
+	value:        (settings.prependSender ? settings.prependSender : "On behalf of"|t),
+	disabled:     (craft.config.get('prependSender', 'contactform') is not sameas(null)),
+	errors:       settings.getErrors('prependSender')
 }) }}
 
 {{ forms.textField({
@@ -27,6 +29,7 @@
 	name:         'prependSubject',
 	instructions: "Text that will be prepended to the email’s Subject to flag that it comes from the Contact Form."|t,
 	value:        (settings.prependSubject ? settings.prependSubject : "New message from {siteName}"|t({ siteName: craft.app.siteName })),
+	disabled:     (craft.config.get('prependSubject', 'contactform') is not sameas(null)),
 	errors:       settings.getErrors('prependSubject')
 }) }}
 
@@ -35,6 +38,7 @@
 	id:           'allowAttachments',
 	name:         'allowAttachments',
 	on:           settings.allowAttachments,
+	disabled:     (craft.config.get('allowAttachments', 'contactform') is not sameas(null)),
 	errors:       settings.getErrors('allowAttachments')
 }) }}
 
@@ -45,6 +49,7 @@
 	name:         'honeypotField',
 	instructions: "The name of the 'honeypot' field in your Contact Form."|t,
 	value:        settings.honeypotField,
+	disabled:     (craft.config.get('honeypotField', 'contactform') is not sameas(null)),
 	errors:       settings.getErrors('honeypotField')
 }) }}
 
